[project]
name = "poo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
]

[tool.ruff]
line-length = 120
extend-exclude = ['migrations', '.venv', 'build', 'dist', 'docs', 'tests', '.vscode']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.taskipy.tasks]
pre_test = 'task lint'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
